used one array instead of two to maintain tasks

--- a/index.html
+++ b/index.html
@@ -71,12 +71,14 @@
 
         <div id="impTasks" class="row container-fluid">
             <h4 id="impTaskH" class="text-danger">Important Tasks:</h4>
+            <div id="impTaskDiv" class="row" style="display: none;"></div>
         </div>
         <br>
         <br>
 
         <div id="allTasks" class="row container-fluid">
             <h4 id="allTasksH">All Tasks:</h4>
+            <div id="allTasksDiv" class="row" style="display: none;"></div>
         </div>
         <br>
         <br>
