--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <br>
 
         <div id="allTasks" class="row container-fluid">
-            <h4 id="allTasksH">All Tasks:</h4>
+            <h4 id="allTasksH">Tasks:</h4>
             <div id="allTasksDiv" class="row" style="display: none;"></div>
         </div>
         <br>
