added div for done section

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         <br>
         <div id="doneTasks" class="row container-fluid">
             <h4 id="doneTasksH"> Done Tasks:</h4>
+            <div id="doneTasksDiv" class="row" style="display: none;"></div>
         </div>
 
 
