added content inside div

--- a/index.html
+++ b/index.html
@@ -71,20 +71,20 @@
 
         <div id="impTasks" class="row container-fluid">
             <h4 id="impTaskH" class="text-danger">Important Tasks:</h4>
-            <div id="impTaskDiv" class="row" style="display: none;"></div>
+            <div id="impTaskDiv" class="row">Nothing to show! Use "Add a Task" section above to add tasks.</div>
         </div>
         <br>
         <br>
 
         <div id="allTasks" class="row container-fluid">
             <h4 id="allTasksH">Tasks:</h4>
-            <div id="allTasksDiv" class="row" style="display: none;"></div>
+            <div id="allTasksDiv" class="row">Nothing to show! Use "Add a Task" section above to add tasks.</div>
         </div>
         <br>
         <br>
         <div id="doneTasks" class="row container-fluid">
             <h4 id="doneTasksH"> Done Tasks:</h4>
-            <div id="doneTasksDiv" class="row" style="display: none;"></div>
+            <div id="doneTasksDiv" class="row">Nothing to show! Complete some task.</div>
         </div>
 
 
