--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <input class="form-control me-2" id="searchTask" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn" type="submit" style=" color: #f4a261;
                     border-color: #f4a261;">Search</button>
                 </form>
