added refresh option

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#doneTasks">Done Tasks</a>
                     </li>
+                    <li class="nav-item" id="refreshTasks">
+                        <a class="nav-link active" aria-current="page" href="#">Refresh</a>
+                    </li>
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" id="searchTask" type="search" placeholder="Search" aria-label="Search">
